Rework API to accept names only, add default error to API docs
